--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nueva-carpeta",
+  "name": "nahuel-hernandez",
   "version": "1.0.0",
-  "description": "",
+  "description": "sass para mi proyecto",
   "main": "index.js",
   "scripts": {
     "build-css": "node-sass --include-path scss scss/estilos.scss css/estilos.css",
